Hotfix: Fixed width of text boxes not scaling down on narrower page widths, such as on mobile devices.

--- a/src/games/love-calculator/stylesheet.css
+++ b/src/games/love-calculator/stylesheet.css
@@ -62,6 +62,7 @@ form,
 form input[ type = 'text' ]
 {
     padding: 0.5rem;
+    max-width: 100%;
 }
 
 form input[ type = 'text' ],
